# Hologram

./: .gitignore  2d_send.py  CMakeLists.txt  README.md  capture.py  cube.py  hand_test.py  hologram_transmitter.py  shared_defs.h  verify_mediapipe.py
config/: menu.json
control/: __init__.py  camera.py  depth.py  hand_gesture.py  network.py
models/: banana.glb  beach.glb  destroyer.glb  fish.glb  plane.glb  squares.glb
python/: calibrate_camera.py  calibrate_hand.py  hand_tracker.py  shared_mem_writer.py
python/config/: camera.json
src/: calibrate.cpp  gesture_test.cpp  main.cpp  test_shm_reader.cpp
src/application/: CellApp.cpp  CellApp.h  CityApp.cpp  CityApp.h  CorridorApp.cpp  CorridorApp.h  CubeApp.cpp  CubeApp.h  DNAHelixApp.cpp  DNAHelixApp.h  DisplayConstraints.h  FlowApp.cpp  FlowApp.h  FluidApp.cpp  FluidApp.h  GestureDetector.h  HandApp.cpp  HandApp.h  IApplication.h  InvadersApp.cpp  InvadersApp.h  MenuApp.cpp  MenuApp.h  MorphApp.cpp  MorphApp.h  PaintApp.cpp  PaintApp.h  ParticleApp.cpp  ParticleApp.h  PongApp.h  ReturnToMenuWatcher.h  TorusKnotApp.cpp  TorusKnotApp.h  VoxelPaint.h  WaveApp.cpp  WaveApp.h  WireframeApp.cpp  WireframeApp.h
src/engine/: CameraConfig.cpp  CameraConfig.h  GlbLoader.cpp  GlbLoader.h  InputBridge.cpp  InputBridge.h  JsonConfig.cpp  JsonConfig.h  Network.cpp  Network.h  ObjLoader.cpp  ObjLoader.h  Renderer.cpp  Renderer.h  Slicer.cpp  Slicer.h
src/shaders/: fluid_sim.glsl  slice_compute.glsl  slice_compute_calibrate.glsl
src/shaders/cell/: render.glsl  seed.glsl  step.glsl
src/shaders/flip/: clear_grid.glsl  divergence.glsl  g2p_advect.glsl  mark_cells.glsl  normalize_vel.glsl  p2g.glsl  particle_recycle.glsl  pressure_jacobi.glsl  snapshot_vel.glsl  subtract_grad.glsl  voxel_splat.glsl
src/shaders/flow/: splat.glsl  step.glsl
src/shaders/paint/: step.glsl
view/: __init__.py  depth_renderer.py  renderer.py  sphere.py
